// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDMethod Handles missing fields 1`] = `
"## ![unknown](.gitbook/assets/unknown.png) [console](./home/console):execute

{% hint style="@uhhhh" %} OH NOOOOOOO {% endhint %}


\`\`\`lua
void console:execute(args)
\`\`\`

Executes a console command programmatically
------
## Parameters

| Type   | Name | Description | Optional |
| ------ | ---- | ----------- | -------: |
| string[]" | "args | No description |  |

"
`;

exports[`MDMethod Handles unknown fields 1`] = `
"##![Base](.gitbook/assets/base.png) $TITLES_B$

![$RANDOM$](.gitbook/assets/$RANDOM$.png)
$UNKNOWN_FIELD$
"
`;

exports[`MDMethod Successfully generates a MD file 1`] = `
"## ![shared](.gitbook/assets/shared.png) [console](./home/console):execute

{% hint style="@warning" %} PAGE / FUNCTIONALITY STILL IN CONSTRUCTION {% endhint %}
{% hint style="@danger" %} OH NOOOOOOO {% endhint %}


\`\`\`lua
boolean, string console:execute(args)
\`\`\`

Executes a console command programmatically
\`\`\`lua
--my_command is the command to execute, true is a parameter
console:execute({"my_command", "true"})
\`\`\`

------
## Parameters

| Type   | Name | Description | Optional |
| ------ | ---- | ----------- | -------: |
| string[] | args | No description |  |

------
## Returns

| Type   | Description |
| ------ | ----------: |
| boolean | If command was executed successfully |
| string | No description |

"
`;
